--- a/pom.xml
+++ b/pom.xml
@@ -56,11 +56,14 @@
             <version>1.18.2</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-simple</artifactId>
-            <version>1.7.7</version>
-        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
+         <dependency>
+             <groupId>org.slf4j</groupId>
+             <artifactId>slf4j-simple</artifactId>
+             <version>1.8.0-beta2</version>
+             <scope>test</scope>
+         </dependency>
+
 
         <dependency>
             <groupId>com.github.docker-java</groupId>
