--- a/pom.xml
+++ b/pom.xml
@@ -57,12 +57,12 @@
         </dependency>
 
         <!-- https://mvnrepository.com/artifact/org.slf4j/slf4j-simple -->
-         <dependency>
+                  <dependency>
              <groupId>org.slf4j</groupId>
              <artifactId>slf4j-simple</artifactId>
-             <version>1.8.0-beta2</version>
-             <scope>test</scope>
-         </dependency>
+             <version>1.7.25</version>
+             <scope>compile</scope>
+           </dependency>
 
 
         <dependency>
