--- a/pom.xml
+++ b/pom.xml
@@ -54,13 +54,13 @@
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
-            <version>1.7.7</version>
+            <version>2.0.0-alpha1</version>
         </dependency>
 
         <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-api</artifactId>
-            <version>1.7.7</version>
+            <version>2.0.0-alpha1</version>
         </dependency>
 
         <dependency>
